[Min-92] 4단계 미션 구현 및 3단계 코드리뷰 반영 (#3303)
* refactor: 코드리뷰 반영

- 테스트케이스 오타 수정
- 변수명에 불필요한 타입이름 삭제
- equals 메소드 오버라이딩

* refactor: 우승자 출력 기능 구현

- 자동차 이름 추가
  - 이름 검증 추가
- 우승자 출력 기능 추가

* test: 테스트케이스 오타 수정

* test: 상수 재활용

* refactor: 메소드명 변경

* refactor: 코드리뷰 적용

- stream 메소드 체이닝 줄 바꿈
- 예외 설명 추가
- 원시값 wrapping 클래스 추가
  - CarName, CarPosition
  - 원시값 일급 컬렉션 CarNames 추가
- 주생성자 활용